# [package]
# name = "BelegeRust"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
[workspace]
members = [
    "VonMises",
    "LinOptimierung",
    "gradient_optimization",
    "traglast",
    "polplan",
    "drehwinkel",
    "dynamik_belege",
    "sensitivity",
    "elast_gebettet",
    "uncertainty",
    "stat_entwerfen",
    "antwortspektrum",
    "misc"
]