[package]
name = "traglast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
faer-core = "0.9.1"
faer-svd = "0.9.1"
dyn-stack = "0.9.0"
plotters = "0.3.5"
num-integer = "0.1"
itertools = "0.10.5"
numerals = "0.1"