[package]
name = "reliability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nalgebra = "0.31.4"
rand = "0.8.5"
rand_distr = "0.4.3"
faer = "0.19.0"
compute = "0.2.3"
compensated-summation = "0.3.0"
#plotters = "0.3.4"